# pmix

./: Makefile.am
src/class/: Makefile.am  pmix_shared_memory.c  pmix_shared_memory.h
src/client/: pmix_client.c  pmix_client_fence.c  pmix_client_get.c  pmix_client_ops.h
src/dstore/: Makefile.am  pmix_sm_dstore.c  pmix_sm_dstore.h
src/server/: pmix_server.c  pmix_server_ops.c
test/: cmd_examples
