# -*- makefile -*-
#
# Copyright (c) 2015      Mellanox Technologies, Inc.
#                         All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$


# This makefile.am does not stand on its own - it is included from
# src/Makefile.am

# Source code files
headers += \
        src/dstore/pmix_sm_dstore.h

sources += \
        src/dstore/pmix_sm_dstore.c

server_headers += \
        src/dstore/pmix_sm_dstore.h

server_sources += \
        src/dstore/pmix_sm_dstore.c

